--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Pollinate - Template your base files and generate them from Git(Hub).</title>
+  <title>Pollinate</title>
 
   <meta name="author" content="EverySquare">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Pollinate - Template your base files and generate them from Git(Hub).">
+  <meta name="description" content="Template and generate files using a simple schema.">
 
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic" rel="stylesheet" type="text/css">
